Corrige versao windows